css/admin-theme.css
:root {
  --peacock-green: #376c74;
  --mediterranean-blue: #187e9b;
  --robin-egg: #d9f1f3;
  --wool: #fbfbf6;
  --light-gray: #d4d4d4;
  --darkest-gray: #1f1f1f;
  --dark-theme-gray-rgb: 78, 89, 89;
  --dark-theme-gray: #4E5959;
  --dark-theme-gray-hover: #353d3d;
  --dark-primary-link: var(--wool);
  --dark-primary-link-hover: #ffffff;
  --dark-gin-icon-color: var(--wool);
  --gin-color-text-light: var(--wool);

  --gin-font: Mallory, sans-serif;
  --gin-font-size-h1: 1.75rem;
  --gin-font-size-h2: 1.5rem;
  --gin-font-size-h3: 1.25rem;
  --gin-border-m: 0.313rem;
  --gin-bg-app: #fcfefe;
  --gin-bg-app-rgb: rgb(252, 254, 254);
  --gin-spacing-m: 1rem;
  --gin-border-l: 0.75rem;
  --gin-color-warning-light: #efcf64;
  --gin-bg-warning: #605328;
  --gin-color-danger-light: #f39b9d;
  --gin-bg-danger: #583333;
  --gin-bg-item-hover: var(--dark-theme-gray-hover);
}

:root [data-gin-accent=light_blue] {
  --gin-color-primary: var(--robin-egg);
  --gin-color-primary-rgb: 217, 241, 243;
  --gin-color-primary-active: var(--wool) !important;
  --gin-color-secondary: var(--mediterranean-blue);
  --gin-icon-color: var(--dark-gin-icon-color);
  --gin-bg-item-hover: var(--dark-theme-gray-hover);
  --gin-bg-header: var(--dark-theme-gray);
  --gin-color-text: var(--wool);
  --gin-color-text-light: var(--wool);
  --gin-color-primary-hover: var(--wool) !important;
  --gin-color-primary-light: var(--gin-bg-item-hover) !important;
  --gin-border-color-layer: var(--wool) !important;

  --gin-color-danger: #E09494;
  --gin-bg-app: var(--darkest-gray);
  --gin-color-info: var(--mediterranean-blue) !important;
  --gin-bg-layer: var(--dark-theme-gray);
  --gin-bg-input: var(--darkest-gray) !important;
  --gin-border-color: var(--wool) !important;
  --gin-dark-gray: var(--darkest-gray);
  --colorGinText: var(--darkest-gray);
  --gin-border-color-table-header: var(--darkest-gray);
  --gin-bg-layer3: var(--dark-theme-gray-hover);
  --gin-color-dark-text: var(--wool);
  --gin-color-title: var(--wool);
  --gin-color-button-text: var(--dark-theme-gray);
  --gin-color-button-text-hover: var(--dark-theme-gray-hover);
  --gin-border-color-layer2: #A8A8A8 !important;
}


/* affect admin paths only */
:root .path-admin h1,
:root .path-admin h2 {
  font-weight: 600;
}

.gin--dark-mode .gin-secondary-toolbar,
.gin--dark-mode .gin-secondary-toolbar--frontend {
  background: rgba(var(--dark-theme-gray-rgb), 1);
}

/* // toolbar overrides */
.gin-secondary-toolbar .toolbar-secondary .toolbar-bar .toolbar-tab .toolbar-tray a:hover, 
.gin-secondary-toolbar .toolbar-secondary .toolbar-bar .toolbar-tab .toolbar-tray a:active {
  background-color: var(--darkest-gray);
}

/* // override toolbar drop-down arrow color */
.gin--dark-mode .toolbar-tray-horizontal ul li.menu-item--expanded ul li.menu-item--expanded::before {
  background-color: var(--wool);
}

/* // remove box-shadows */
.gin--dark-mode .glb-claro-details__summary::after {
  box-shadow: inset 0 0 0 3px var(--gin-color-primary) !important;
}

/* // Layout-builder  */

/* Buttons */
.glb-button,
.form-actions .glb-button,
.inline-block-create-button,
.layout-builder__link--add,
.inline-block-create-button:not(:focus),
.layout-builder__link--add:not(:focus),
.form-actions .inline-block-create-button,
.form-actions .layout-builder__link--add,
.glb-action-link--icon-trash.glb-action-link,
.meta-sidebar__trigger.is-active,
.meta-sidebar__close.is-active {
  background-color: var(--darkest-gray) !important;
  border-color: var(--wool) !important;
  color: var(--robin-egg) !important;
}

.glb-button,
.inline-block-create-button,
.layout-builder__link--add,
.glb-button:not(:focus),
.inline-block-create-button:not(:focus),
.layout-builder__link--add:not(:focus),
.form-actions .glb-button,
.form-actions .inline-block-create-button,
.form-actions .layout-builder__link--add,
.glb-action-link--icon-trash.glb-action-link {
  border-radius: 2.5rem !important;
}

.glb-button:hover,
.inline-block-create-button:hover,
.layout-builder__link--add:hover,
.glb-button:not(:focus):hover,
.inline-block-create-button:not(:focus):hover,
.layout-builder__link--add:not(:focus):hover,
.form-actions .glb-button:hover,
.form-actions .inline-block-create-button:hover,
.form-actions .layout-builder__link--add:hover,
.glb-action-link--icon-trash.glb-action-link:hover {
  border-color: var(--dark-theme-gray-hover) !important;
}

.glb-button:active, 
.inline-block-create-button:active, 
.layout-builder__link--add:active, 
.glb-button:focus, 
.inline-block-create-button:focus, 
.layout-builder__link--add:focus, 
.glb-button:not(:focus):active, 
.inline-block-create-button:not(:focus):active, 
.layout-builder__link--add:not(:focus):active, 
.glb-button:not(:focus):focus, 
.inline-block-create-button:not(:focus):focus, 
.layout-builder__link--add:not(:focus):focus, 
.form-actions .glb-button:active, 
.form-actions .inline-block-create-button:active, 
.form-actions .layout-builder__link--add:active, 
.form-actions .glb-button:focus, 
.form-actions .inline-block-create-button:focus, 
.form-actions .layout-builder__link--add:focus, 
.glb-action-link--icon-trash.glb-action-link:active, 
.glb-action-link--icon-trash.glb-action-link:focus {
  background-color: var(--robin-egg) !important;
}

.layout-builder__section:hover .layout-builder__link--add-section-to-library,
.layout-builder__section:hover .layout-builder__link--remove {
  background-color: var(--dark-theme-gray-hover) !important;
}

.layout-builder__section:hover .layout-builder__link--configure {
  color: var(--wool) !important;
  background-color: var(--dark-theme-gray) !important;
}

.paragraphs-dropdown-toggle {
  background-color: var(--wool);
}

.link:hover {
  text-decoration: underline;
}

.link.tabledrag-toggle-weight {
  color: var(--gin-color-primary);
  background-color: var(--darkest-gray);
}


.gin--dark-mode .glb-table .tabledrag-handle::after {
  background-color: var(--darkest-gray) !important;
}

/* Media library */ 
.media-library-item__click-to-select-checkbox .glb-form-checkbox:checked {
  background-color: var(--darkest-gray) !important;
}

/* Sections on nodes */
.layout-builder .layout-builder__add-section {
  position: relative;
  background-color: hsl(180, 7%, 90%);
  padding: 1rem 2rem;
  margin: 2rem 1rem;
  max-width: calc(100% - 2rem);
}

.layout-builder__link--configure {
  color: var(--dark-theme-gray);
}

.layout-builder__link--add-section-to-library,
.layout-builder__link--remove {
  background-color: var(--dark-theme-gray-hover);
}

.layout-builder__section:not(.gin-lb--disable-section-focus)::after {
  border: 0.35rem solid  hsl(180, 7%, 75%) !important;
  position: absolute;
  content: '';
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.layout-builder__section:not(.gin-lb--disable-section-focus):hover::after {
  border: 0.35rem solid  hsl(180, 7%, 20%) !important;
}

.layout-builder__section {
  margin: 2rem 1rem;
}

.layout-builder__section .js-layout-builder-region {
  padding: 1rem;
}

/* Make the secondary toolbar fixes */
.gin-secondary-toolbar--frontend {
  position: fixed;
  background-color: var(--gin-bg-layer);
  width: 100%;
  top: calc(var(--gin-toolbar-secondary-height) - 7px) !important;
}

/* Layout builder modal */
.ws-lb-link__label {
  color: var(--dark-theme-gray) !important;
}

.gin--dark-mode .form-element,
.gin--dark-mode .glb-form-element {
  background-color: var(--darkest-gray) !important;
}

/* remove media button */
.gin--dark-mode .media-library-add-form__remove-button {
  background-color: var(--robin-egg);
  color: var(--darkest-gray);
}

.ui-dialog-titlebar {
  background: var(--darkest-gray);
}

.gin--dark-mode .field-multiple-table h4 {
  color: var(--wool);
}

/* yalb-1261 - fix hover color on table */
.layout-builder-components-table__block-label {
  color: var(--dark-theme-gray-hover);
  background-color: var(--wool);
}
.layout-builder-components-table__block-label:hover {
  color: var(--dark-theme-gray-hover);
  text-decoration: underline;
}

.layout-builder-components-table th {
  color: var(--wool);
  background-color: var(--darkest-gray);
}

.layout-builder-components-table th:hover {
  color: var(--wool);
  background-color: var(--darkest-gray);
}
.layout-builder-components-table tr:nth-child(2n) {
  background-color: var(--dark-theme-gray);
}
.layout-builder-components-table tr:hover {
  color: var(--dark-theme-gray);
  background-color: var(--wool);
}

.layout-builder-components-table__block-label--current,
.layout-builder-components-table__block-label--current:hover {
  color: var(--wool);
  background-color: var(--dark-theme-gray-hover);
}

/* yalb-1251 - AX: pencil icon difficulty editing blocks */
/* change the contextual pencil icon to the left-hand side of each component
// instead of the right
*/
.layout-builder-block.contextual-region .contextual {
  display: flex;
  flex-direction: column;
  top: 1rem;
  left: 2vw;
  right: auto;
  width: auto;
}

@media only screen and (min-width: 2200px) {
  .layout-builder-block.contextual-region .contextual {
    left: 15vw;
  }
}

@media only screen and (min-width: 2500px) {
  .layout-builder-block.contextual-region .contextual {
    left: 20vw;
  }
}

.layout-builder-block.contextual-region .contextual .contextual-links {
  left: 0;
  right: 0;
  float: unset;
}

/* increase the size of the clickable/hoverable area */
.layout-builder-block.contextual-region .contextual .trigger {
  width: 50px !important;
  height: 50px !important;
}

/* increase the size of the icon itself */
.layout-builder-block.contextual-region .contextual .trigger::before {
  width: 1.2rem;
  height: 1.2rem;
  mask-size: 1.2rem;
  -webkit-mask-size: 1.2rem;
}

/* add min-height so that smaller (in height) components are more easily
// able to be interacted with - e.g. `divider`
*/
.layout-builder-block {
  min-height: 6rem;
}

/* increase padding around the divider when in layout-builder, to make the
// divider more visible
*/
.layout-builder-block .divider__wrapper {
  display: flex;
  align-items: center;
  padding-inline: 2rem;
}


/* Blocks - accordion block, button block */
.field--name-field-accordion-items th h4,
.field--name-field-button-link th h4 {
  color: var(--wool) !important;
}

/* Gin tables */
.glb-table tr:nth-child(2n) {
  background-color: var(--dark-theme-gray);
}

.js .paragraphs-description .summary-content {
  color: var(--wool);
}

.field-multiple-drag.tabledrag-cell {
  background-color: var(--wool);
}


/* chosen overrides */
.gin--dark-mode .chosen-container .chosen-results li.highlighted {
  background-color: var(--gin-color-primary);
  color: var(--darkest-gray);
}

.gin--dark-mode .chosen-container-single .chosen-single span {
  color: var(--wool);
}

.gin--dark-mode .chosen-search-input,
.gin--dark-mode .chosen-search-input::placeholder {
  color: var(--dark-theme-gray) !important;
}

/* search input placeholder opacity */
input[type="search"]::placeholder {
  opacity: 1;
}

.gin--dark-mode .ui-autocomplete {
  background-color: var(--darkest-gray);
}

.gin--dark-mode #drupal-off-canvas .ui-autocomplete .ui-menu-item-wrapper:hover {
  color: var(--darkest-gray) !important;
}

/* Target accordions and give them a darker background */
.gin--dark-mode .claro-details__summary,
.gin--dark-mode .glb-claro-details__summary {
  background-color: var(--darkest-gray) !important;
}


/* views forms */
.gin--dark-mode .views-ui-admin-settings-basic,
.gin--dark-mode .views-ui-admin-settings-advanced {
  background-color: var(--darkest-gray) !important;
}

/* // Autocomplete */

.gin--dark-mode .ui-autocomplete .ui-menu-item-wrapper {
  color: var(--wool);
}

.gin--dark-mode .ui-autocomplete .ui-menu-item-wrapper.ui-state-active {
  background-color: var(--dark-theme-gray);
  color: var(--wool);
}

